tests222/tests2/test108.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: function hcc8r is not defined
^
